Several updates - New generator config format - Tons of code generator changes - Added lots of java docs - Renamed project folders - Added example module - Prettified generated class names