@@ -3,8 +3,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>dev.viskar</groupId>
-    <artifactId>lib-dinput8-parent</artifactId>
-    <version>BRANCH-SNAPSHOT</version>
+    <artifactId>lib-directinput8-parent</artifactId>
+    <version>main-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <properties>
@@ -12,10 +12,10 @@
     </properties>
 
     <modules>
-        <module>native-codegen</module>
-        <module>dinput8-jextract</module>
-
-        <module>dinput8</module>
+        <module>lib-common-codegen</module>
+        <module>lib-directinput8-jextract</module>
+        <module>lib-directinput8</module>
+        <module>lib-directinput8-example</module>
     </modules>
 
     <dependencyManagement>
@@ -23,12 +23,17 @@
             <!-- modules -->
             <dependency>
                 <groupId>${project.groupId}</groupId>
-                <artifactId>lib-dinput8</artifactId>
+                <artifactId>lib-directinput8</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
                 <groupId>${project.groupId}</groupId>
-                <artifactId>lib-dinput8-jextract</artifactId>
+                <artifactId>lib-directinput8-jextract</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>${project.groupId}</groupId>
+                <artifactId>lib-directinput8-example</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
@@ -46,19 +51,23 @@
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>3.8.1</version>
                     <configuration>
-                        <!--
-                        <verbose>false</verbose>
-                        <fork>true</fork>
-                        <executable>javac</executable>
+                        <source>17</source>
+                        <target>17</target>
                         <compilerVersion>17</compilerVersion>
-                        -->
+                        <!--<release>17</release>-->
                         <compilerArgs>
+                            <!-- Debug symbols are useful for the code generator to access -->
                             <arg>-g</arg>
                             <arg>-parameters</arg>
+                            <!-- Add the jdk.foreign module -->
                             <arg>--add-modules</arg>
                             <arg>jdk.incubator.foreign</arg>
+                            <!-- fun stuff -->
+                            <arg>--add-opens</arg>
+                            <arg>java.desktop/sun.awt.windows=ALL-UNNAMED</arg>
+                            <arg>--add-exports</arg>
+                            <arg>java.desktop/sun.awt.windows=ALL-UNNAMED</arg>
                         </compilerArgs>
-                        <release>17</release>
                     </configuration>
                 </plugin>
             </plugins>
